--- a/rjournal/ino.Rmd
+++ b/rjournal/ino.Rmd
@@ -1,26 +1,26 @@
 ---
-title: "ToOoOlTiPs: An R Package for Customizable Tooltips in Interactive Graphics"
+title: "ino: Initialization of Numerical Optimization in R"
 abstract: >
-  An abstract of less than 150 words.
+  Numerical optimization of some target functions is of great relevance in many fields, as many optimization problems cannot be solved analytically. While R provides several functions for applying numerical optimization, such as `nlm()` or `optim()` from the stats package, users have to select initial values when applying such methods. Since the choice of inital values can hugely affect the convergence time and rate, several strategies exist for selecting initial values. The ino package provides a toolbox for evaluating the effect of the initial values on the optimization as well as comparing different initialization strategies and optimizers.
 draft: true
 author:  
   # see ?rjournal_article for more information
-  - name: Quietest Quokka
-    affiliation: University of Little Mates
+  - name: Lennart Oelschl&#228;ger
+    affiliation: Bielefeld University
     address:
-    - Department of Letter Q
-    - Somewhere, Australia
-    url: https://www.britannica.com/animal/quokka
-    orcid: 0000-1721-1511-1101
-    email:  qquo@ulm.edu
-  - name: Bounciest Bilby
-    url: https://www.britannica.com/animal/bilby
-    email: bbil@ulm.edu
-    orcid: 0000-0002-0912-0225
-    affiliation: University of Little Mates
+    - Department of Business Administration and Economics
+    - Bielefeld, Germany
+    url: https://loelschlaeger.de/
+    #orcid: 0000-1721-1511-1101
+    email:  lennart.oelschlaeger@uni-bielefeld.de
+  - name: Marius &#214;tting
+    url: https://www.uni-bielefeld.de/fakultaeten/wirtschaftswissenschaften/lehrbereiche/stats/team/marius-otting-(m.sc.)/
+    email: marius.oetting@uni-bielefeld.de
+    orcid: 0000-0002-9373-0365
+    affiliation: Bielefeld University
     address:
-    - Department of Letter B
-    - Somewhere, Australia
+    - Department of Business Administration and Economics
+    - Bielefeld, Germany
 type: package
 output: 
   rjtools::rjournal_web_article:
@@ -32,61 +32,29 @@ bibliography: RJreferences.bib
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
-library(plotly)
 library(ggplot2)
-library(palmerpenguins)
 ```
 
 # Introduction
 
-Interactive data graphics provides plots that allow users to interact them. One of the most basic types of interaction is through tooltips, where users are provided additional information about elements in the plot by moving the cursor over the plot.
 
-This paper will first review some R packages on interactive graphics and their tooltip implementations. A new package \CRANpkg{ToOoOlTiPs} that provides customized tooltips for plot, is introduced. Some example plots will then be given to showcase how these tooltips help users to better read the graphics. 
 
-# Background
+# A brief background on numerical optimization
 
-Some packages on interactive graphics include \CRANpkg{plotly} [@plotly] that interfaces with Javascript for web-based interactive graphics, \CRANpkg{crosstalk} [@crosstalk] that specializes cross-linking elements across individual graphics.  The recent R Journal paper \CRANpkg{tsibbletalk} [@RJ-2021-050] provides a good example of including interactive graphics into an article for the journal. It has both a set of linked plots, and also an animated gif example, illustrating linking between time series plots and feature summaries.
+## Numerical optimization
 
-# Customizing tooltip design with \pkg{ToOoOlTiPs}
+## Strategies for choosing initial values 
 
-\pkg{ToOoOlTiPs} is a packages for customizing tooltips in interactive graphics, it features these possibilities.
+# Usage of {ino}
 
-# A gallery of tooltips examples
+## Implementation of strategies for choosing initial values 
 
-The \CRANpkg{palmerpenguins} data [@palmerpenguins]  features three penguin species which has a lovely illustration by Alison Horst in Figure \@ref(fig:penguins-alison). 
+## Application to mixture models
 
-```{r penguins-alison, out.width = "100%", out.height = "30%", fig.cap = "Artwork by \\@allison\\_horst", fig.alt="A picture of three different penguins with their species: Chinstrap, Gentoo, and Adelie. "}
-knitr::include_graphics("penguins.png")
-```
+## Application to hidden Markov models
 
-Table `r knitr::asis_output(ifelse(knitr::is_html_output(), '\\@ref(tab:penguins-tab-interactive)', '\\@ref(tab:penguins-tab-static)'))` prints at the first few rows of the `penguins` data:
+## Applicationt to multinomial probit models
 
-```{r penguins-tab-interactive, eval = knitr::is_html_output(), layout = "l-body-outset"}
-knitr::kable(head(penguins), format = "html", caption = "A basic table")
-```
+# Discussion
 
-```{r penguins-tab-static, eval = knitr::is_latex_output()}
-knitr::kable(head(penguins), format = "latex", caption = "A basic table") %>% 
-  kableExtra::kable_styling(font_size = 7)
-```   
 
-Figure `r knitr::asis_output(ifelse(knitr::is_html_output(), '\\@ref(fig:penguins-plotly)', '\\@ref(fig:penguins-ggplot)'))` shows an `r ifelse(knitr::is_html_output(), 'interactive', '')` plot of the penguins data, made using the `r knitr::asis_output(ifelse(knitr::is_html_output(), '\\CRANpkg{plotly}', '\\CRANpkg{ggplot2}'))` package. 
-
-```{r penguins-plotly, echo = TRUE, fig.height = 5, fig.cap="A basic interactive plot made with the plotly package on palmer penguin data. Three species of penguins are plotted with bill depth on the x-axis and bill length on the y-axis. When hovering on a point, a tooltip will show the exact value of the bill depth and length for that point, along with the species name.", include=knitr::is_html_output(), eval=knitr::is_html_output(), fig.alt = "A scatterplot of bill length against bill depth, both measured in millimetre. The three species are shown in different colours and loosely forms three clusters. Adelie has small bill length and large bill depth, Gentoo has small bill depth but large bill length, and Chinstrap has relatively large bill depth and bill length."}
-p <- penguins %>% 
-  ggplot(aes(x = bill_depth_mm, y = bill_length_mm, 
-             color = species)) + 
-  geom_point()
-ggplotly(p)
-```
-
-```{r penguins-ggplot, echo = TRUE, fig.height = 5, fig.cap="A basic non-interactive plot made with the ggplot2 package on palmer penguin data. Three species of penguins are plotted with bill depth on the x-axis and bill length on the y-axis. Visit the online article to access the interactive version made with the plotly package.", include=knitr::is_latex_output(), eval=knitr::is_latex_output()}
-penguins %>% 
-  ggplot(aes(x = bill_depth_mm, y = bill_length_mm, 
-             color = species)) + 
-  geom_point()
-```
-
-# Summary
-
-We have displayed various tooltips that are available in the package \pkg{ToOoOlTiPs}. 
