--- a/rjournal/ino.Rmd
+++ b/rjournal/ino.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "ino: Initialization of Numerical Optimization in R"
 abstract: >
-  Numerical optimization of some target functions is of great relevance in many fields, as many optimization problems cannot be solved analytically. While R provides several functions for applying numerical optimization, such as `nlm()` or `optim()` from the stats package, users have to select initial values when applying such methods. Since the choice of inital values can hugely affect the convergence time and rate, several strategies exist for selecting initial values. The ino package provides a toolbox for evaluating the effect of the initial values on the optimization as well as comparing different initialization strategies and optimizers.
+  Numerical optimization of some target functions is of great relevance in many fields, as many optimization problems cannot be solved analytically. While R provides several functions for applying numerical optimization, such as `nlm()` or `optim()` from the stats package, users have to select initial values when applying such methods. Since the choice of initial values can hugely affect the convergence time and rate, several strategies exist for selecting initial values. The ino package provides a toolbox for evaluating the effect of the initial values on the optimization as well as comparing different initialization strategies and optimizers.
 draft: true
 author:  
   # see ?rjournal_article for more information
