--- a/rjournal/ino.tex
+++ b/rjournal/ino.tex
@@ -5,7 +5,7 @@
 \maketitle
 
 \abstract{%
-Numerical optimization of some target functions is of great relevance in many fields, as many optimization problems cannot be solved analytically. While R provides several functions for applying numerical optimization, such as \texttt{nlm()} or \texttt{optim()} from the stats package, users have to select initial values when applying such methods. Since the choice of inital values can hugely affect the convergence time and rate, several strategies exist for selecting initial values. The ino package provides a toolbox for evaluating the effect of the initial values on the optimization as well as comparing different initialization strategies and optimizers.
+Numerical optimization of some target functions is of great relevance in many fields, as many optimization problems cannot be solved analytically. While R provides several functions for applying numerical optimization, such as \texttt{nlm()} or \texttt{optim()} from the stats package, users have to select initial values when applying such methods. Since the choice of initial values can hugely affect the convergence time and rate, several strategies exist for selecting initial values. The ino package provides a toolbox for evaluating the effect of the initial values on the optimization as well as comparing different initialization strategies and optimizers.
 }
 
 \hypertarget{introduction}{%
@@ -13,6 +13,8 @@ Numerical optimization of some target functions is of great relevance in many fi
 
 \hypertarget{a-brief-background-on-numerical-optimization}{%
 \section{A brief background on numerical optimization}\label{a-brief-background-on-numerical-optimization}}
+
+\includegraphics{ino_files/figure-latex/plot_ackley-1.pdf}
 
 \hypertarget{numerical-optimization}{%
 \subsection{Numerical optimization}\label{numerical-optimization}}
@@ -32,8 +34,8 @@ Numerical optimization of some target functions is of great relevance in many fi
 \hypertarget{application-to-hidden-markov-models}{%
 \subsection{Application to hidden Markov models}\label{application-to-hidden-markov-models}}
 
-\hypertarget{applicationt-to-multinomial-probit-models}{%
-\subsection{Applicationt to multinomial probit models}\label{applicationt-to-multinomial-probit-models}}
+\hypertarget{application-to-multinomial-probit-models}{%
+\subsection{Application to multinomial probit models}\label{application-to-multinomial-probit-models}}
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
