--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -20,19 +20,20 @@ knitr::opts_chunk$set(
   out.width = "75%"
 )
 library("ino")
+# devtools::load_all() # remove later
 options("ino_verbose" = FALSE)
+options("ino_ncores" = 1)
+options("ino_digits" = 2)
 set.seed(1)
 ```
 
-## The motivation behind the {ino} R package
+## Motivation behind {ino}
 
-Optimization of some target function is of great relevance in many fields, including finance (portfolio optimization), engineering (minimizing air resistance), and statistics (likelihood maximization). Often, the optimization problem cannot be solved analytically, for example when explicit formulas for gradient or Hessian are unknown. In these cases, numerical optimization algorithms are helpful. They iteratively explore the parameter space, guaranteeing to improve the function value over each iteration, and eventually converge to a point where no more improvements can be made [@Bonnans:2006].
+Optimization is of great relevance in many fields, including finance (portfolio optimization), engineering (minimizing air resistance), and statistics (likelihood maximization). Often, the optimization problem cannot be solved analytically, for example when explicit formulas for gradient or Hessian are unknown. In these cases, numerical optimization algorithms are helpful. They iteratively explore the parameter space, guaranteeing to improve the function value over each iteration, and eventually converge to a point where no more improvements can be made [@Bonnans:2006]. In R, several functions are available that can be applied to numerically solve optimization problems, including (quasi) Newton (`stats::nlm()`, `stats::nlminb()`, `stats::optim()`), direct search (`pracma::nelder_mead()`), and conjugate gradient methods (`Rcgmin::Rcgmin()`). The [CRAN Task View: Optimization and Mathematical Programming](https://CRAN.R-project.org/view=Optimization) provides a comprehensive list of packages for solving optimization problems. 
 
-In R, several functions are available that can be applied to numerically solve optimization problems, including (quasi) Newton (`stats::nlm()`, `stats::nlminb()`, `stats::optim()`), direct search (`pracma::nelder_mead()`), and conjugate gradient methods (`Rcgmin::Rcgmin()`). The [CRAN Task View: Optimization and Mathematical Programming](https://CRAN.R-project.org/view=Optimization) provides a comprehensive list of packages for solving optimization problems. All these functions share the requirement that initial parameters values must be supplied from where the optimization is started. 
+One thing that all of these numerical optimizers have in common is that initial parameter values must be specified, i.e., the point from where the optimization is started. Optimization theory [@Nocedal:2006] states that the choice of an initial point has a large influence on the convergence time and rate: in general, starting in areas of function saturation increases computation time, starting in areas of non-concavity may lead to convergence problems or convergence to local rather than global optima. Consequently, numerical optimization can be facilitated by putting effort on identifying good starting values.
 
-Optimization theory [@Nocedal:2006] shows that the choice of an initial point has a large influence on the convergence time and rate. In general, starting in areas of function saturation increases computation time, starting in areas of non-concavity may lead to convergence problems or convergence to local rather than global optima. Therefore, numerical optimization can be facilitated by putting effort on identifying good starting values. However, it is generally unclear what plausible initial values are and how they might affect the optimization problem at hand.
-
-The purpose of the {ino} R package is therefore threefold: to provide a comprehensive toolbox for 
+However, it is generally unclear what plausible initial values are and how they might affect the optimization problem at hand. Therefore, the purpose of the {ino} R package (*ino* is an acronym for *i*nitialization of *n*umerical *o*ptimization) is to provide a comprehensive toolbox for 
 
 1. evaluating the effect of the initial values on the optimization,
 
@@ -40,83 +41,165 @@ The purpose of the {ino} R package is therefore threefold: to provide a comprehe
 
 3. and comparing different optimizer.
 
-## The main {ino} functionality
+## Functionality of {ino}
 
-- The starting point for working with {ino} is the `setup_ino()` function to specify the optimization problem, including the numerical optimizer.
-- Subsequently, the following functions can be applied to execute different initialization strategies:
-  - `fixed_initialization()` to optimize with fixed initial starting values
-  - `random_initialization()` to optimize with randomly chosen starting values
-  - `standardize_initialization()` to optimize after standardizing the optimization problem
-  - `subset_initialization()` to start optimization on a sub-problem
-- For evaluating the results, `overview_optima()` prints an overview of all local and global optima, and the `plot()` and `summary()` methods summarize the optimization runs.
+The {ino} package provides the R6 class `Nop` (an acronym for *n*umerical *o*ptimization *p*roblem).
 
-## The {ino} workflow
+- The starting point for working with {ino} is to define a `Nop` object via `Nop$new()`.
 
-We demonstrate the basic {ino} workflow in the context of likelihood maximization, where we fit a two-class Gaussian mixture model to to the eruption times in the popular `faithful` data set that is provided via base R.
+- Use the method `$set_optimizer()` to define one or more numerical optimizer.
 
-> Remark: Optimization in this example is very fast. This is because the data set is relatively small and we consider a model with only two classes. Therefore, it might not seem relevant to be concerned about initialization here. However, the problem scales: optimization time will rise with more data and more parameters, in which case initialization becomes a greater issue, see for example @Shireman:2017.
+- Then, `$evaluate()` evaluates and `$optimize()` optimizes the target function.
+
+- For evaluating the results, `$optima()` prints an overview of all optima, and the `plot()` and `summary()` methods summarize the optimization runs.
+
+- The method `$standardize()` can be used to standardize the optimization problem.
+
+- The method `$reduce()` can be used to simplify the optimization problem.
+
+## Working with {ino}
+
+We demonstrate the basic {ino} workflow in the context of likelihood maximization, where we fit a two-class Gaussian mixture model to Geyser eruption times in the popular `faithful` data set that is provided via base R.
+
+> **Remark** Optimization in this example is very fast. This is because the data set is relatively small and we consider a model with only two classes. Therefore, it might not seem relevant to be concerned about initialization here. However, the problem scales: optimization time will rise with more data and more parameters, in which case initialization becomes a greater issue, see for example @Shireman:2017. Additionally, we will see that this simple optimization problem suffers from local optima, depending of the choice of initial values.
 
 ### The optimization problem
 
-The `faithful` data set contains information about the eruption times of the Old Faithful geyser in Yellowstone National Park, Wyoming, USA. The following histogram indicates two clusters with short and long eruption times, respectively:
+The `faithful` data set contains information about the eruption times of the Old Faithful geyser in Yellowstone National Park, Wyoming, USA. The following histogram hints at two clusters with short and long eruption times, respectively:
 
-```{r}
+```{r, include = FALSE, warning = FALSE}
 library("ggplot2")
 data("faithful")
+```
+
+```{r}
 str(faithful)
 ggplot(faithful, aes(x = eruptions, y = after_stat(density))) + 
   geom_histogram(bins = 30) + 
   xlab("Eruption time (min)") 
 ```
 
-For both clusters, we assume a normal distribution here, such that we consider a mixture of two Gaussian densities for modeling the overall eruption times. The log-likelihood is given by
+For both clusters, we assume a normal distribution here, such that we consider a mixture of two Gaussian densities for modeling the overall eruption times. The log-likelihood function is given by
 
 $$
 \ell(\boldsymbol{\theta}) = \sum_{i=1}^n \log\Big( \pi f_{\mu_1, \sigma_1^2}(x_i) + (1-\pi)f_{\mu_2,\sigma_2^2} (x_i) \Big),
 $$
-where $f_{\mu_1, \sigma_1^2}$ and $f_{\mu_2, \sigma_2^2}$ denote the normal density for the first and second cluster, respectively, and $\pi$ is the mixing proportion. The vector of parameters to be estimated is thus $\boldsymbol{\theta} = (\mu_1, \mu_2, \sigma_1, \sigma_2, \pi)$. As there exists no closed-form solution for the maximum likelihood estimator, we need numerical optimization for finding the function optimum, where the {ino} package will help us in applying different initialization strategies. 
 
-The following function implements the log-likelihood of the normal mixture. Note that we restrict the standard deviations `sigma` to be positive and `pi` to be between 0 and 1, and that the function returns the negative log-likelihood value.
+where $f_{\mu_1, \sigma_1^2}$ and $f_{\mu_2, \sigma_2^2}$ denote the normal density for the first and second cluster, respectively, and $\pi$ is the mixing proportion. The vector of parameters to be estimated is thus $\boldsymbol{\theta} = (\mu_1, \mu_2, \sigma_1, \sigma_2, \pi)$. As there exists no closed-form solution for the maximum likelihood estimator, we need numerical optimization for finding the function optimum. 
+
+The following function calculates the log-likelihood of the normal mixture, given the parameter vector `theta` and column `column` of the `data.frame` `data`. Note that we restrict the standard deviations `sigma` to be positive (via the exponential transformation) and `pi` to be between 0 and 1 (via the logit transformation), and that the function returns the negative log-likelihood value.
 
 ```{r}
-normal_mixture_llk <- function(theta, data, column){
+normal_mixture_llk <- function(theta, data, column, neg = TRUE){
+  stopifnot(length(theta) == 5)
   mu <- theta[1:2]
   sigma <- exp(theta[3:4])
   pi <- plogis(theta[5])
-  llk <- sum(log(pi * dnorm(data[[column]], mu[1], sigma[1]) + 
-                (1 - pi) * dnorm(data[[column]], mu[2], sigma[2])))
-  return(-llk)
+  x <- data[[column]]
+  llk <- sum(log(pi * dnorm(x, mu[1], sigma[1]) + (1 - pi) * dnorm(x, mu[2], sigma[2])))
+  ifelse(neg, -llk, llk)
 }
 ```
 
-### Specification
+### Specification in {ino}
 
-The optimization problem is specified using the function `setup_ino`. Here, 
+The optimization problem is specified as a `Nop` R6 object called `geyser` below, where
 
 - `f` constitutes the function to be optimized (i.e., `normal_mixture_llk`), 
-- `npar` specifies the number of parameters (i.e., the length of the parameter vector), 
-- `data` gives the data frame of observations as required by our likelihood function,
-- `column = "eruptions"` is an additional function argument, 
-- and `opt` sets the numerical optimizer. 
+- `npar` specifies the length of the parameter vector over which `f` is optimized,
+- `data` gives the `data.frame` of observations as required by our likelihood function,
+- and `column = "eruptions"` is an additional function argument for `f`. 
 
-Numerical optimizer must be specified through the framework provided by the [{optimizeR} package](https://CRAN.R-project.org/package=optimizeR). It is possible to define a list of multiple optimizer for comparison.
+The `print()` method provides an overview of the specification.
 
 ```{r}
-geyser_ino <- Nop$new(
+geyser <- Nop$new(
   f = normal_mixture_llk, 
   npar = 5, 
   data = faithful, 
   column = "eruptions"
- )$
- set_optimizer(optimizer_nlm())
-geyser_ino
+ )
+print(geyser)
 ```
 
-Behind the scenes, `setup_ino` runs several input checks that can be specified via the `test_par` argument. Subsequently, it returns an `ino` object that can be passed to the other {ino} functionalities.
+The numerical optimizer is the next specification step, which we can specify via the `$set_optimizer()` method. Numerical optimizer must be specified through the unified framework provided by the [{optimizeR} package](https://CRAN.R-project.org/package=optimizeR). This is necessary, because there is no a priori consistency across optimization functions in R with regard to their function inputs and outputs. This would make it impossible to allow for arbitrary optimizer and to compare their results, see [the {optimizeR} README file for details](https://cran.r-project.org/package=optimizeR/readme/README.html).
 
-### Fixed starting values
+It is possible to define any numerical optimizer through the {optimizeR} framework. Here, we select two of the most popular R optimizer, `stats::nlm()` and `stats::optim()`:
 
-We will first consider fixed starting values for the likelihood optimization, i.e., we make "educated guesses" about starting values that are probably close to the global optimum. Based on the histogram above, the means of the two normal distributions may be somewhere around 2 and 4. For the variances, we set the starting values to 1 (note that we use the log transformation here since we restrict the standard deviations to be positive by using `exp()` in the log-likelihood function). 
+```{r}
+geyser$
+  set_optimizer(optimizer_nlm(), label = "nlm")$
+  set_optimizer(optimizer_optim(), label = "optim")
+```
+
+Finally, we recommend to test the configuration with a call of the `$test()` method:
+
+```{r, R.options = list("ino_verbose" = TRUE)}
+geyser$test()
+```
+
+### Function evaluation
+
+Evaluating the `normal_mixture_llk` at some value for the parameter vector `theta` is possible with the `$evaluate()` method:
+
+```{r}
+geyser$evaluate(at = 1:5)
+```
+
+### Function optimization
+
+Optimization of the `normal_mixture_llk` is possible with the `$optimize()` method, for example:
+
+```{r}
+geyser$optimize(initial = "random", which_optimizer = "nlm", save_result = FALSE, return_result = TRUE)
+```
+
+The method arguments are:
+
+- `initial = "random"` for random starting values drawn from a standard normal distribution,
+
+- `which_optimizer = "nlm"` for optimization with the above specified `stats::nlm` optimizer,
+
+- `save_result = FALSE` to not save the optimization result in the `geyser` object, see below,
+
+- and `return_results = TRUE` to return the optimization result.
+
+The returned optimization result is a `list` of:
+
+- `value`, the optimum function value,
+
+- `parameter`, the parameter vector where `value` is obtained,
+
+- `seconds`, the estimation time in seconds,
+
+- `initial`, the starting parameter vector for the optimization,
+
+- and `gradient`, `code`, and `iterations` are outputs specific to the `stats::nlm` optimizer.
+
+### Initialization effect
+
+We are interested in the effect of the starting values on the optimization, i.e., whether different initial values lead to different results. We therefore optimize the likelihood function `runs = 100` times with different random starting points and compare the identified optima:
+
+```{r}
+geyser$optimize(initial = "random", runs = 100, label = "random", save_results = TRUE, seed = 1)
+```
+
+We see that the different runs led to `r nrow(geyser$optima(digits = 0, sort_by = "value"))` different optima (minima in this case, because we minimize `normal_mixture_llk()`):
+
+```{r}
+geyser$optima(digits = 0, sort_by = "value")
+```
+
+Depending on the application and the magnitude of the parameters to be estimated, initial values drawn from a standard normal distribution may not be a good guess. We can, however, easily modify the distribution that is used to draw the random numbers. For example, the next code snippet uses starting values drawn from a $\mathcal{N}(2, 0.5)$:
+
+```{r}
+# sampler <- function() stats::rnorm(5, mean = 2, sd = 0.5)
+# geyser$optimize(initial = sampler, runs = 10, label = "custom_sampler")
+```
+
+### Educated guesses
+
+Next we make "educated guesses" about starting values that are probably close to the global optimum. Based on the histogram above, the means of the two normal distributions may be somewhere around 2 and 4. For the variances, we set the starting values to 1 (note that we use the log transformation here since we restrict the standard deviations to be positive by using `exp()` in the log-likelihood function). 
 
 We will use two sets of starting values where the means are lower and larger than 2 and 4, respectively. For both sets, the starting value for the mixing proportion is 0.5.
 
@@ -131,76 +214,32 @@ For comparison, we also consider a third set of starting values which are somewh
 starting_values[[3]] <- c(10, 8, log(0.1), log(0.2), qlogis(0.5))
 ```
 
-The function provided by {ino} to run the optimization with chosen starting values is `fixed_initialization()`. We loop over the set of starting values by passing them to the argument `at`.  
+In the `$optimize()` method, instead of `label = "random"`, we can set `label` to a numeric vector of length `npar`, or for convenience to a `list` of such vectors, like `starting_values`:
 
 ```{r}
-for(val in starting_values)
-  geyser_ino$optimize(initial = val)
+geyser$optimize(initial = starting_values, label = "educated_guess")
 ```
 
 Let's look at the results:
 
 ```{r}
-summary(geyser_ino)
+summary(geyser, which_runs = "last")
 ```
 
-The `summary()` method returns an overview of the three optimization runs. The first column names the initialization strategy, the second column gives the optimization time, the third column the function value at the optimum, and the fourth column an identifier for the optimizer.
+The `summary()` method returns an overview of the three optimization runs performed with the two optimizer.
+
+Show more values with the `"comment"` argument. See names of all available columns with `"geyser$summary_columns"`.
+
+```{r}
+# geyser$get_value(which_value = "initial", which_run = 10, which_optimizer = 100)
+```
 
 ### Discard optimization runs
 
-The third run (with the unplausible starting values) converged to a local minimum, as we can deduce from the column ".optimum". We discard this run from further comparisons:
+The third run (with the unplausible starting values) converged to a local minimum, as we can deduce from the column "value". We discard this run from further comparisons:
 
 ```{r}
-# geyser_ino <- clear_ino(geyser_ino, which = 3)
-# not implemented yet, should we?
-```
-
-### More information about the optimization runs
-
-The `geyser_ino` object saved more information than those provided by the `summary()` method. The `var_names()` function returns the names of all available variables:
-
-```{r}
-geyser_ino$summary_columns
-``` 
-
-Variable names starting with a "." are the variables that {ino} provides per default:
-
-- `.fail`, the error message of a failed optimization run (if any),
-- `.strategy`, the label for the initialization strategy,
-- `.time`, the optimization time,
-- `.optimum`, the function value at the estimated optimum,
-- `.init`, the initial parameter vector,
-- `.estimate`, the estimated (optimal) parameter vector,
-- `.optimizer`, the label for the optimizer.
-
-The other variables come either from the function or the optimizer. For example, "iterations" is the number of iterations of the `stats::nlm()` optimizer. The value can be accessed via the `get_vars()` function:
-
-```{r}
-# get_vars(geyser_ino, runs = 1:2, vars = "iterations")
-# not implemented yet, should we?
-```
-
-### Randomly chosen starting values
-
-When using randomly chosen starting values, we apply the function `random_initialization()`. The most simple function call would be as follows:
-
-```{r}
-geyser_ino$optimize(initial = "random", runs = 10)
-```
-
-Here, starting values are randomly drawn from a standard normal distribution. Depending on the application and the magnitude of the parameters to be estimated, this may not be a good guess. We can, however, easily modify the distribution that is used to draw the random numbers. For example, the next code snippet uses starting values drawn from a $\mathcal{N}(2, 0.5)$:
-
-```{r}
-sampler <- function() stats::rnorm(5, mean = 2, sd = 0.5)
-geyser_ino$optimize(initial = sampler, runs = 10, label = "random_cs")
-```
-
-The argument `sampler` allows to use any random number generator, while further arguments for the sampler can easily be added. 
-
-The `overview_optime()` function provides an overview of the identified local and global optima so far:
-
-```{r}
-geyser_ino$optima()
+# geyser$clear(which_runs = 103, which_optimizer = "all")
 ```
 
 ### Standardized initialization
@@ -208,9 +247,9 @@ geyser_ino$optima()
 For standardized initialization, we standardize all columns in our data before running the optimization. Specifically, after standardizing the data, we can again select to use either fixed or randomly chosen starting values. In the example code snippet shown below, we consider ten sets of randomly selected starting values:
 
 ```{r}
-geyser_ino$standardize("data")
-geyser_ino$optimize(runs = 10, label = "standardize")
-geyser_ino$reset_argument("data")
+geyser$standardize("data")
+geyser$optimize(runs = 10, label = "standardize")
+geyser$reset_argument("data")
 ```
 
 ### Subset initialization
@@ -220,9 +259,9 @@ If the data set considered shows some complex structures or is very large, numer
 The function `subset_initialization` first optimizes the function on a data subset of proportion `prop`, and subsequently optimizes on the full data set using the estimates from the first step as initial values. For example, the following code snippet randomly samples 25\% of the observations and uses random initialization:
 
 ```{r}
-geyser_ino$reduce("data", how = "random", prop = 0.25)
-geyser_ino$optimize(runs = 10, label = "subset")
-geyser_ino$reset_argument("data")
+geyser$reduce("data", how = "random", prop = 0.25)
+geyser$optimize(runs = 10, label = "subset")$continue()
+geyser$reset_argument("data")
 ```
 
 In addition to selecting subsamples at random, we can specify two further options using the argument `how`. When dealing with time series data, we usually do not want to delete single observations at random. Instead, we can select a proportion of the first rows by specifying `how = "first"`. We could also cluster our data first using `how = "kmeans"`. 
@@ -232,7 +271,7 @@ In addition to selecting subsamples at random, we can specify two further option
 The `plot()` method provides a boxplot comparison of the optimization times. We can compare the optimization times across initialization strategies by specifying `by = .strategy`:
 
 ```{r, out.width = "100%"}
-geyser_ino$plot(by = "label", nrow = 1)
+geyser$plot(by = "label", nrow = 1)
 ```
 
 ## References
